static/css/style.css
/* These css elements style the whole site, and the base.html template */

.transition-on {
    transition: 0.8s all;
}

body {
    background-color: black;
    color: white;
    font-family: 'Kanit', sans-serif;
    margin-bottom: 55px;
}

footer {
    height: 50px;
}

h1, h2, h3, h4, h5, h6 {
    color: yellow;
    text-shadow: 0 0 1px greenyellow;
    font-family: 'wallpoet', sans-serif;
}

.text-greenyellow {
    color: greenyellow;
}

.text-white {
    color: white;
}

p, span {
    color: white;
    font-size: 1.1rem;
}

input {
    background-color:#00000088;
    color: inherit;
    border: 1px solid gray;
    border-radius: 4px;
    padding: 4px 8px;
    margin: 0 20px;
    text-align: center;
}

input[type=range] {
    width: 85%;
}

a {
    text-decoration: none;
}

button {
    color: greenyellow;
    background-color: #66656570;
    text-shadow: 0 0 2px purple;
    font-size: 1.2rem;
    font-weight: bolder;
    transition: 0.2s all;
    border: 2px solid #acff2fbb;
    border-radius: 5px;
    padding: 3px 10px;
}

button:hover {
    text-shadow: 0 0 4px pink;
    transition: 0.2s all;
    background-color: #42414170;
    border: 2px solid greenyellow;
}

button:disabled {
    color: gray;
    text-shadow: none;
    border: 1px solid gray;
    opacity: 0.5;
}

.highlighted-button {
    background-color:rgb(167, 167, 86);
}

.darker-background {
    background-image: radial-gradient(#000000bb, #00000088);
    border-radius: 20px;
}

.grey-background {
    background-image: radial-gradient(#ffffff66, #ffffffcc);
}

.light-border {
    border: 1px solid gray;
    border-radius: 20px;
}

#message-holder {
    height: 60px;
}

.custom-justbeats-modal {
    color: yellowgreen;
    background-color: #555555;
}

/* These css elements style the navbar */

.site-logo {
    font-family: 'outrun';
}

#logged-in-user {
    color: yellowgreen;
}


.navbar-brand {
    width: 300px;
}


/* These css elements style the loop detail page */
.large-play-button {
    color: yellow;
    border: 3px solid rgb(251, 251, 118);
    font-size: 80px;
    width: 120px;
    height: 120px;
    border-radius: 50%;
}

.play-button-icon {
    transform: translateX(5px);
    pointer-events: none;
}

.pause-button-icon {
    pointer-events: none;
}

.large-play-button:hover {
    border: 3px solid yellow;
}

.loop-volume {
    width: 100%;
    color: yellowgreen !important; 
}

.readonly-beat {
    display: inline-block;
    width: 5px;
    height: 30px;
    background-color: lightblue;
    opacity: 0.2;
    border-radius: 5px;
}

.readonly-active-beat {
    opacity: 0.7;
}

.readonly-highlighted-beat {
    height: 35px;
    opacity: 0.4;
}

.readonly-active-highlighted-beat {
    height: 35px;
    opacity: 1.0;
    color: blue;
}

#share-loop-title {
    color: greenyellow;
}

.copy-icon {
    font-size: 1.5rem;
    padding: 5px 10px;
    margin-left: 20px;
}

#pasteable-link {
    border: 1px solid gray;
    padding: 5px 10px;
    border-radius: 5px;
}

@media screen and (max-width: 768px) {
    #pasteable-link {
        font-size: 0.8rem;
    }
    .copy-icon {
        margin-left: 0;
        margin-top: 10px;
    }
}

#loop-detail-volume {
    font-size: 1.8rem;
}


/* These css elements style the review page */

input[type="number"] {
    color: white;
    max-width: 100px
}

.custom-text-area {
    background-color: #ffffff33;
    color: white;
    border: 1px solid gray;
}

.custom-text-area:focus {
    background-color: #ffffff77;
    color: white;
}

label {
    color: white;
    text-shadow: 0 0 1px greenyellow;
    font-family: 'wallpoet';
    font-size: 1.5rem;
}

.review-outline {
    border: 1px solid #ffffff33;
    overflow: hidden;
    padding: 5px;
    border-radius: 10px;
}

/* These css elements style the drum loop list template ----------*/

.vert-gap-100 {
    margin-top: 100px;
}

.vert-gap-200 {
    margin-top: 200px;
}

.dark-shadow-text {
    text-shadow: 0 0 130px black;
}

.beats-header {
    color: greenyellow;
    text-shadow: 0 0 2px pink;
    font-weight: bolder;
}

.drumloop-table {
    overflow-x: auto;
    margin: auto;
    padding: 10px;
    text-align: center;
    border-collapse: separate;
    border-spacing: 0 0.5rem;
    border: 3px solid transparent;
    border-radius: 10px;
    background-image: radial-gradient(#aaaaaaff, #aaaaaaaa);
    box-shadow: 0 0 5px black;
}

.drumloop-table-row:hover {
    background-color: rgb(179, 207, 122);
    transition: 0.3s all;
}

.drumloop-table thead {
    color: greenyellow;
    text-shadow: 2px 2px 5px purple;
}

.drumloop-table-item {
    color: black;
    font-size: 1.2rem;
    padding: 5px 15px;
    transition: 0.5s all;
}

.rating-star {
    font-size: 1.2rem;
    color: gold;
}

.play-button:hover {
    text-shadow: 0 0 5px pink;
    transition: 0.5s all;
}

.drum-image {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    opacity: 0.4;
}

.edit-button {
    color: yellow;
    border-color: rgb(249, 249, 137);
    margin-left: 10px;
}

.edit-button:hover {
    border-color: yellow;
}

@media screen and (max-width:450px) {
    .drumloop-table {
        padding: 2px
    }
    .drumloop-table-item {
        padding: 5px;
        font-size: 0.8rem;
    }
    .play-button {
        font-size: 1.4rem;
    }
    .edit-button {
        font-size: 0.8rem;
        padding: 3px 5px;
    }
}

/* These css elements style the drumloop_editor template ---------*/

#drumloop_name {
    width: 300px;
    height: 70px;
    font-size: 1.2rem;
    color: white;
}

#tempo {
    font-size: 1.2rem;
    color: white;
}

.medium-play-button {
    color: yellow;
    border: 3px solid rgb(251, 251, 118);
    font-size: 40px;
    width: 70px;
    height: 70px;
    border-radius: 50%;
}

.medium-play-button:hover {
    border: 3px solid yellow;
}

.track-holder {
    background-color: #333333aa;
    padding: 0 20px;
    border: 1px solid gray;
    border-radius: 5px;
    max-width: 1320px;
}

.track {
    display: inline-block;
}

.track-volume {
    display: inline-block;
    color: white;
    background: yellow;
    width: 100%;
}

.beat {
    display: inline-block;
    width: 10px;
    height: 32px;
    background-color: gray;
    border: 1px solid rgb(116, 221, 125);
}

.beat:nth-child(4n - 3) {
    display: inline-block;
    margin-left: 3px;
    background-color: gray;
    border: 1px solid rgb(116, 221, 125);
    height: 35px;
}

@media screen and (max-width: 600px) {
    .beat {
        width: 6px;
    }
}

@media screen and (max-width: 500px) {
    .beat {
        width: 3px;
    }
    .track-holder {
        padding: 0
    }
}

.current {
    border: 2px solid white;
}

.active_beat {
    background: radial-gradient(rgb(140, 189, 6),rgb(68, 92, 3));
}

.beats-field {
    user-select: none;
}

.beat-volumes-field {
    user-select: none;
    display: none;
}

.hidden {
    display: none;
}

.beats-holder, .instrument-name, .track-volume {
    display: inline-block;
}

.instrument-name {
    color: #bbbbbb;
    width: 100%;
    border-radius: 5px;
    padding: 5px;
    margin: 3px;
    border: 1px solid #333333;
}

.instrument-name:hover {
    color: white;
    border: 1px solid white;
}

/* These css elements style the instrument selector modal ---------*/
.selected-instrument {
    border: 1px solid white;
}

/* These css elements style the forms */
.form-holder {
    color: white;
    display: block;
    font-size: 1.5em;
}

.form-holder input{
    padding: 5px;
    margin: 15px;
}

